[gd_scene load_steps=3 format=3 uid="uid://cf8rx6rvhvn1j"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_6g7wl"]
[ext_resource type="FontFile" uid="uid://d0dlky4ti6iy8" path="res://fonts/retrofont.ttf" id="1_pbw4q"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6g7wl")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_pbw4q")
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_pbw4q")
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -15.5
offset_right = 53.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
theme_override_fonts/font = ExtResource("1_pbw4q")
theme_override_font_sizes/font_size = 32
text = "Puchale play"

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
